# AlectryonMath

./: .gitignore  CMakeLists.txt
libalectryonmath/: CMakeLists.txt
libalectryonmath/include/alectryonmath/: AlectryonMath.h  AlectryonMath.hpp  Angle.h  Angle.hpp  Quaternion.hpp  RotationConversions.h  RotationConversions.hpp  RotationOperations.hpp  alectryon_angle.hpp  alectryon_math.hpp  rotation_conversions.hpp  rotation_operations.hpp
libalectryonmath/src/: Angle.cpp  RotationConversions.cpp
libalectryonmath/tests/: AlectryonMathUnitTests.cpp  AngleUnitTests.cpp  RotationConversionsIntensiveTest.cpp  RotationConversionsUnitTests.cpp  RotationOperationsUnitTests.cpp  TestHelpers.h  generate_test_cases.py  rot_data.data
libangle/: CMakeLists.txt
libangle/include/: Angle.h
libangle/src/: Angle.cpp
libtransformation/: CMakeLists.txt
libtransformation/include/: RotationConversions.h
libtransformation/src/: RotationConversions.cpp
tests/: AlectryonMathUnitTests.cpp  AngleUnitTests.cpp  QuaternionUnitTests.cpp  RotationConversionsUnitTests.cpp  RotationOperationsUnitTests.cpp  TestHelpers.h  TransformUnitTests.cpp  TransformationUnitTests.cpp
